# PR-Reviewer-Test-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  models.yaml  pyproject.toml
.github/workflows/: docker.yml
docs/: api.md  architecture.md  cli.md  configuration.md  developer_workflow.md  extension_guide.md  known_issues.md  observability.md  overview.md  quickstart.md  release_flow.md  roadmap.md  runbook.md  setup.md  testing.md  troubleshooting.md
docs/flows/: review_flow.md  test_check_flow.md  test_scenarios_flow.md
samples/: sample.patch
scripts/checks/: pre_merge_checklist.sh
scripts/dev/: redeploy_dev_local.sh
scripts/prod/: deploy_prod.sh  rollback_prod.sh
src/api/: dependencies.py  main.py  readiness.py
src/application/: errors.py
src/application/orchestrators/: analysis_orchestrator.py  mode_registry.py
src/application/services/: diff_processor.py  secret_masker.py
src/cli/: main.py  transports.py
src/config/: models.py  settings.py
src/domain/formatters/: output_formatter.py
src/domain/models/: schemas.py
src/domain/rules/: test_requirement.py
src/infrastructure/llm/: adapter.py  output_quality.py
src/infrastructure/llm/backends/: base.py  llama_cpp_backend.py  mock_backend.py  ollama_backend.py
src/infrastructure/prompts/: renderer.py
tests/: conftest.py  test_api.py  test_cli.py  test_formatter.py  test_integration_cli_http.py  test_jsonl_repository.py  test_mock_adapter.py  test_models_config.py  test_ollama_output_quality.py  test_orchestrator_failures.py  test_rules.py  test_secret_masker.py
(+7 files in other folders)
