[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-reviewer-test-assistant"
version = "0.1.0"
description = "Local-only PR Reviewer + Test Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0"
]

[project.scripts]
ai-review = "src.cli.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.infrastructure.prompts" = ["templates/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]
